--- a/app/assets/stylesheets/games.scss
+++ b/app/assets/stylesheets/games.scss
@@ -1,3 +1,24 @@
 // Place all the styles related to the games controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.container{
+  width:300px;
+}
+
+.flex {
+  display:flex;
+}
+
+.scrabble {
+  background: #CCCCCC;
+  color: #FFFFFF;
+  padding: 5px;
+  border: 3px solid black;
+  justify-content: space-evenly;
+  list-style-type: none;
+}
+
+.white-border {
+  border: 4px solid white;
+}
