--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -1,14 +1,15 @@
 <h1>New Game</h1>
-<ul>
+<ul class="flex">
 <% @letters.each do |letter| %>
-  <li><%= letter.capitalize %></li>
+  <div class="white-border">
+  <li class="scrabble"><%= letter.capitalize %></li>
+  </div>
 <% end %>
 </ul>
 <br>
 <form action="/score" method="post">
   <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
   <%= hidden_field_tag :letters_array, @letters %>
-
   <input type="text" name="word" placeholder="Type your word">
   <input type="submit">
 </form>
